--- a/index.html
+++ b/index.html
@@ -818,6 +818,11 @@ These stakeholders determine the extent and the level of detail of your work and
 <td class="tableblock halign-left valign-top"><p class="tableblock">Learn new frontend skills and build a nice app</p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Chen Xin Pan Wang</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="mailto:uo276967@uniovi.es">uo276967@uniovi.es</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Learn some new technologies and work in a good team</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Cristian Augusto</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="mailto:augustocristian@uniovi.es">augustocristian@uniovi.es</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">A full functional and decentralized app</p></td>
@@ -1110,6 +1115,10 @@ together with a mapping table showing the relationships between channels and inp
 <td class="tableblock halign-left valign-top"><p class="tableblock">MongoDB</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Used for store some aditional data.</p></td>
 </tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Bootstrap</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Simplifies the use of CSS and HTML, using the HTLM5 standards.</p></td>
+</tr>
 </tbody>
 </table>
 <div class="paragraph">
@@ -1191,6 +1200,9 @@ Refer to details in the following sections.</p>
 <li>
 <p><strong>Github</strong>: is a version management system where all the code will be stored, structured and modified.</p>
 </li>
+<li>
+<p><strong>Bootstrap</strong>: is a framework that provides a collection of tools to simplify the use of html and css in the application.</p>
+</li>
 </ul>
 </div>
 <div class="sect2">
@@ -1205,6 +1217,9 @@ Refer to details in the following sections.</p>
 </li>
 <li>
 <p>Github was chosen for version control and organization and communication between the team.</p>
+</li>
+<li>
+<p>Bootstrap was chosen becouse the facilities it provides and to have a nice, clean and responsive view to the web app.</p>
 </li>
 </ul>
 </div>
@@ -1450,7 +1465,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_register_user">6.1. Register User</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/register%20diagram.png" alt="register diagram" width="357" height="298">
+<img src="./images/register%20diagram.png" alt="register diagram" width="337" height="305">
 </div>
 </div>
 </div>
@@ -1458,7 +1473,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_user_login_pod">6.2. User Login Pod</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/login%20diagram.png" alt="login diagram" width="529" height="370">
+<img src="./images/login%20diagram.png" alt="login diagram" width="491" height="378">
 </div>
 </div>
 </div>
@@ -1466,7 +1481,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_visualize_map">6.3. Visualize map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Map%20diagram.png" alt="Map diagram" width="661" height="415">
+<img src="./images/Map%20diagram.png" alt="Map diagram" width="628" height="426">
 </div>
 </div>
 </div>
@@ -1474,7 +1489,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_friends_list">6.4. Friends list</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Friends%20list%20diagram.png" alt="Friends list diagram" width="599" height="357">
+<img src="./images/Friends%20list%20diagram.png" alt="Friends list diagram" width="555" height="365">
 </div>
 </div>
 </div>
@@ -1482,7 +1497,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_add_places_to_map">6.5. Add places to map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Add%20places%20diagram.png" alt="Add places diagram" width="686" height="357">
+<img src="./images/Add%20places%20diagram.png" alt="Add places diagram" width="650" height="365">
 </div>
 </div>
 </div>
@@ -1490,7 +1505,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_reviews">6.6. Reviews</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Reviews%20diagram.png" alt="Reviews diagram" width="799" height="328">
+<img src="./images/Reviews%20diagram.png" alt="Reviews diagram" width="742" height="335">
 </div>
 </div>
 </div>
@@ -1498,7 +1513,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_filter_map">6.7. Filter map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/filter%20map%20diagram.png" alt="filter map diagram" width="917" height="415">
+<img src="./images/filter%20map%20diagram.png" alt="filter map diagram" width="851" height="426">
 </div>
 </div>
 <div style="page-break-after: always;"></div>
@@ -1880,7 +1895,7 @@ here in this central section or whether you better document it locally
 <td class="tableblock halign-left valign-top"><p class="tableblock">The general cloud computing issues as backup protection.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">CSS</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">CSS+Bootstrap</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">We use it to add a nice look to the application.</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">It&#8217;s a well known stylesheet languaje for the team.</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Different browsers work different, we have to take care of it.</p></td>
@@ -2113,13 +2128,6 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 <div class="paragraph">
 <p>This is a list of identified technical debts, ordered by priority (1 is the highest priority).</p>
 </div>
-<div class="olist arabic">
-<ol class="arabic">
-<li>
-<p>The frontend application unsolved package vulnerabilities, forcing us to use the '--force' when we need to install.</p>
-</li>
-</ol>
-</div>
 <div style="page-break-after: always;"></div>
 </div>
 </div>
@@ -2211,6 +2219,10 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 <td class="tableblock halign-left valign-top"><p class="tableblock">SOLID</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">SOLID is an acronym for the first five object-oriented design principleS. These principles establish practices that lend to developing software with considerations for maintaining and extending as the project grows.</p></td>
 </tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Bootstrap</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">A multiplatform library, open source toolbox to design web applications.</p></td>
+</tr>
 </tbody>
 </table>
 <div style="page-break-after: always;"></div>
@@ -2238,7 +2250,7 @@ Created by Dr. Peter Hruschka &amp; Dr. Gernot Starke.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-03-01 20:25:51 +0100
+Last updated 2023-04-12 21:04:39 +0200
 </div>
 </div>
 </body>
