--- a/index.html
+++ b/index.html
@@ -510,6 +510,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </ul>
 </li>
 <li><a href="#section-glossary">12. Glossary</a></li>
+<li><a href="#section-test">13. Test</a>
+<ul class="sectlevel2">
+<li><a href="#section-sonarcloud">13.1. Sonarcloud</a></li>
+<li><a href="#section-gatling">13.2. Gatling</a></li>
+<li><a href="#section-usability">13.3. Usability</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
@@ -1436,7 +1443,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_register_user">6.1. Register User</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/register%20diagram.png" alt="register diagram" width="337" height="305">
+<img src="./images/register%20diagram.png" alt="register diagram" width="357" height="298">
 </div>
 </div>
 </div>
@@ -1444,7 +1451,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_user_login_pod">6.2. User Login Pod</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/login%20diagram.png" alt="login diagram" width="402" height="348">
+<img src="./images/login%20diagram.png" alt="login diagram" width="434" height="341">
 </div>
 </div>
 </div>
@@ -1452,7 +1459,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_visualize_map">6.3. Visualize map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Map%20diagram.png" alt="Map diagram" width="376" height="305">
+<img src="./images/Map%20diagram.png" alt="Map diagram" width="396" height="298">
 </div>
 </div>
 </div>
@@ -1460,7 +1467,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_friends_list">6.4. Friends list</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Friends%20list%20diagram.png" alt="Friends list diagram" width="438" height="305">
+<img src="./images/Friends%20list%20diagram.png" alt="Friends list diagram" width="473" height="298">
 </div>
 </div>
 </div>
@@ -1468,7 +1475,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_add_places_to_map">6.5. Add places to map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Add%20places%20diagram.png" alt="Add places diagram" width="465" height="305">
+<img src="./images/Add%20places%20diagram.png" alt="Add places diagram" width="492" height="298">
 </div>
 </div>
 </div>
@@ -1476,7 +1483,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_reviews">6.6. Reviews</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Reviews%20diagram.png" alt="Reviews diagram" width="605" height="305">
+<img src="./images/Reviews%20diagram.png" alt="Reviews diagram" width="648" height="298">
 </div>
 </div>
 </div>
@@ -1484,7 +1491,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_filter_map">6.7. Filter map</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/filter%20map%20diagram.png" alt="filter map diagram" width="504" height="287">
+<img src="./images/filter%20map%20diagram.png" alt="filter map diagram" width="550" height="282">
 </div>
 </div>
 <div style="page-break-after: always;"></div>
@@ -2187,6 +2194,182 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 </tbody>
 </table>
 <div style="page-break-after: always;"></div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="section-test">13. Test</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>In this section we are going to test the application. We will use the following
+technologies for testing:</p>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 50%;">
+<col style="width: 50%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">Name</th>
+<th class="tableblock halign-left valign-top">Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Sonarcloud</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Checks the code coverage and quality for the application tests.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Cucumber</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Technology used for behavior driven development (BDD) to write acceptance tests for the application.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Gatling</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Technology used for load testing the application.</p></td>
+</tr>
+</tbody>
+</table>
+<div class="paragraph">
+<p>We are going to analyze the results of the Gatling tests in the following section.</p>
+</div>
+<div class="sect2">
+<h3 id="section-sonarcloud">13.1. Sonarcloud</h3>
+<div class="paragraph">
+<p>Sonarcloud allows us to check the code coverage and quality of the application. The following image shows the results of the Sonarcloud tests:</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="./images/sonarcloud_test.png" alt="sonarcloud test">
+</div>
+</div>
+<div class="paragraph">
+<p>We can see how we have a 80% of code coverage for the application. We can also see that the code quality is good, with 0 bugs and 0 security vulnerabilities. We can also see that the code duplication is 1.1% which seems to be a good value thinking that the application hasn&#8217;t been developed by a single person and a refactor of the code has never been done.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="section-gatling">13.2. Gatling</h3>
+<div class="paragraph">
+<p>After running the Gatling tests, we can analyze the results. After analyzing the results, we can see that the application at 100 active users and 50 requests per second has a response time of 0.8 seconds for a 40% of success rate. The following image shows the results of the Gatling tests:</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="./images/test_gatling.png" alt="test gatling">
+</div>
+</div>
+<div class="paragraph">
+<p>Maybe the success rate is not the best, but we can see that the response time is very good. We have to take into account that the application is running in a free instance of Netlify, so the performance is not the best. If we want to improve the performance, we can migrate the application to another cloud provider, like AWS, Azure or Google Cloud. We also need to take into account that the test have been run</p>
+</div>
+<div class="paragraph">
+<p>when a lot of traffic has been generated to Inrupt POD provider. This can affect the results of the tests.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="section-usability">13.3. Usability</h3>
+<div class="paragraph">
+<p>In this section we are going to have a look at the usability of the application. We have done a usability test with 5 users. The following table shows the results of the usability test:</p>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 14.2857%;">
+<col style="width: 14.2857%;">
+<col style="width: 14.2857%;">
+<col style="width: 14.2857%;">
+<col style="width: 14.2857%;">
+<col style="width: 14.2857%;">
+<col style="width: 14.2858%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">Question</th>
+<th class="tableblock halign-left valign-top">Luis</th>
+<th class="tableblock halign-left valign-top">Carmen</th>
+<th class="tableblock halign-left valign-top">Paula</th>
+<th class="tableblock halign-left valign-top">Ana</th>
+<th class="tableblock halign-left valign-top">David</th>
+<th class="tableblock halign-left valign-top">Average</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Is the application intuitive?</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">8</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">7</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">8.8</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Is the application easy to use?</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">8</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">7</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">8.8</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Is the application attractive?</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">8</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">9.2</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Is the application fast?</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">7</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">6</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">7</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">8</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">8</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">7.2</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Is the application accessible?</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">8</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">8.8</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Is the application useful?</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">8</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">9.2</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">How would you rate the application?</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">9.8</p></td>
+</tr>
+</tbody>
+</table>
+<div class="paragraph">
+<p>We can see that overall the application has a good user rate. The users have rated the application with a 9.8 out of 10. The users have also rated the application as intuitive, easy to use, attractive, accessible and useful. The only thing that the users have not rated very well is the speed of the application. The found themselves waiting for the application to load some times.</p>
+</div>
+<div class="paragraph">
+<p>The users have the following age:
+* Luis: 60
+* Carmen: 55
+* Paula: 19
+* Ana: 66
+* David: 22</p>
+</div>
+<div class="paragraph">
+<p>We can see that the users are from different ages, so we can say that the application is suitable for all ages.</p>
+</div>
+<div style="page-break-after: always;"></div>
 <div class="paragraph">
 <p><strong>About arc42</strong></p>
 </div>
@@ -2209,9 +2392,10 @@ Created by Dr. Peter Hruschka &amp; Dr. Gernot Starke.</p>
 </div>
 </div>
 </div>
+</div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-04-30 12:32:49 +0200
+Last updated 2023-05-01 16:47:23 +0200
 </div>
 </div>
 </body>
